// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Sidebar > should render and match snapshot when open 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  min-width: 256px;
  background-color: #1A1A1A;
  -webkit-transition: -webkit-transform var(--cui-transitions-default);
  transition: transform var(--cui-transitions-default);
  position: absolute;
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
  z-index: var(--cui-z-index-navigation);
  -webkit-transform: translateX(0);
  -moz-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
}

@media (min-width: 960px) {
  .circuit-0 {
    -webkit-transform: translateX(0);
    -moz-transform: translateX(0);
    -ms-transform: translateX(0);
    transform: translateX(0);
    position: relative;
  }
}

@media (min-width: 960px) {
  .circuit-0 {
    -webkit-transform: translateX(0);
    -moz-transform: translateX(0);
    -ms-transform: translateX(0);
    transform: translateX(0);
  }
}

.circuit-1 {
  width: 100%;
  height: 100%;
  position: absolute;
  background-color: #1A1A1A;
  -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  visibility: hidden;
  opacity: 0;
  z-index: 700;
  visibility: inherit;
  opacity: 0.56;
}

@media (min-width: 960px) {
  .circuit-1 {
    visibility: hidden;
  }
}

.circuit-2 {
  position: absolute;
  bottom: 16px;
  right: 16px;
  -webkit-transition: opacity 150ms ease-in-out,visibility 150ms ease-in-out;
  transition: opacity 150ms ease-in-out,visibility 150ms ease-in-out;
  visibility: hidden;
  opacity: 0;
  z-index: 800;
  visibility: inherit;
  opacity: 1;
}

@media (min-width: 960px) {
  .circuit-2 {
    visibility: hidden;
  }
}

<div>
  <nav
    class="circuit-0"
  >
    Content
  </nav>
  <div
    class="circuit-1"
    data-testid="sidebar-backdrop"
  />
  <button
    class="_base_60a0b0 _secondary_60a0b0 _m_60a0b0 _focus-visible_73b4bb _base_037c7e _m_037c7e _base_9bf092 circuit-2"
    data-testid="sidebar-close-button"
    title="Close sidebar"
    type="button"
  >
    <span
      aria-hidden="true"
      class="_loader_60a0b0"
    >
      <span
        class="_dot_60a0b0"
      />
      <span
        class="_dot_60a0b0"
      />
      <span
        class="_dot_60a0b0"
      />
      <span
        class="_hide-visually_73b4bb"
      />
    </span>
    <span
      class="_content_60a0b0"
    >
      <svg
        aria-hidden="true"
        class="_icon_60a0b0"
        fill="none"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.71 19.29c.186.19.29.445.29.71a1 1 0 0 1-1 1c-.265 0-.52-.104-.71-.29L12 13.42l-7.29 7.29c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.265.104-.52.29-.71L10.58 12 3.29 4.71A1.014 1.014 0 0 1 3 4a1 1 0 0 1 1-1c.266 0 .52.104.71.29L12 10.58l7.29-7.29c.19-.186.445-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71L13.42 12l7.29 7.29z"
          fill="currentColor"
        />
      </svg>
      <span
        class="_label_60a0b0"
      >
        Close sidebar
      </span>
    </span>
  </button>
</div>
`;

exports[`Sidebar > should render and match the snapshot when closed 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  min-width: 256px;
  background-color: #1A1A1A;
  -webkit-transition: -webkit-transform var(--cui-transitions-default);
  transition: transform var(--cui-transitions-default);
  position: absolute;
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
  z-index: var(--cui-z-index-navigation);
}

@media (min-width: 960px) {
  .circuit-0 {
    -webkit-transform: translateX(0);
    -moz-transform: translateX(0);
    -ms-transform: translateX(0);
    transform: translateX(0);
    position: relative;
  }
}

.circuit-1 {
  width: 100%;
  height: 100%;
  position: absolute;
  background-color: #1A1A1A;
  -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  visibility: hidden;
  opacity: 0;
  z-index: 700;
}

@media (min-width: 960px) {
  .circuit-1 {
    visibility: hidden;
  }
}

.circuit-2 {
  position: absolute;
  bottom: 16px;
  right: 16px;
  -webkit-transition: opacity 150ms ease-in-out,visibility 150ms ease-in-out;
  transition: opacity 150ms ease-in-out,visibility 150ms ease-in-out;
  visibility: hidden;
  opacity: 0;
  z-index: 800;
}

@media (min-width: 960px) {
  .circuit-2 {
    visibility: hidden;
  }
}

<div>
  <nav
    class="circuit-0"
  >
    Content
  </nav>
  <div
    class="circuit-1"
    data-testid="sidebar-backdrop"
  />
  <button
    class="_base_60a0b0 _secondary_60a0b0 _m_60a0b0 _focus-visible_73b4bb _base_037c7e _m_037c7e _base_9bf092 circuit-2"
    data-testid="sidebar-close-button"
    title="Close sidebar"
    type="button"
  >
    <span
      aria-hidden="true"
      class="_loader_60a0b0"
    >
      <span
        class="_dot_60a0b0"
      />
      <span
        class="_dot_60a0b0"
      />
      <span
        class="_dot_60a0b0"
      />
      <span
        class="_hide-visually_73b4bb"
      />
    </span>
    <span
      class="_content_60a0b0"
    >
      <svg
        aria-hidden="true"
        class="_icon_60a0b0"
        fill="none"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.71 19.29c.186.19.29.445.29.71a1 1 0 0 1-1 1c-.265 0-.52-.104-.71-.29L12 13.42l-7.29 7.29c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.265.104-.52.29-.71L10.58 12 3.29 4.71A1.014 1.014 0 0 1 3 4a1 1 0 0 1 1-1c.266 0 .52.104.71.29L12 10.58l7.29-7.29c.19-.186.445-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71L13.42 12l7.29 7.29z"
          fill="currentColor"
        />
      </svg>
      <span
        class="_label_60a0b0"
      >
        Close sidebar
      </span>
    </span>
  </button>
</div>
`;
